[package]
name = "lj"
version = "0.1.0"
authors = ["Alex Smith <alex@alexsmith.dev>"]
edition = "2018"
description = "Like `ls`, but outputs JSON!"
readme = "README.md"
homepage = "https://www.github.com/alex9smith/lj"
repository = "https://www.github.com/alex9smith/lj"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
serde_json = "1"